[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/LassoBullet.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="AudioStreamSample" id=4]

[node name="LassoBullet" type="Area"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.137466, 0, 0, 0, 0.137466, 0, 0, 0, 0.137466, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.174324, 0, 0, 0, 0.174324, 0, 0, 0, 0.185278, 0, 0, 0 )
shape = SubResource( 3 )

[node name="RopePartEffect" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 4 )

[node name="milisecondDelay" type="Timer" parent="."]
wait_time = 0.05
[connection signal="body_entered" from="." to="." method="_on_LassoBullet_body_entered"]
[connection signal="timeout" from="RopePartEffect" to="." method="_on_RopePartEffect_timeout"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_TimeToLive_timeout"]
[connection signal="timeout" from="milisecondDelay" to="." method="_on_milisecondDelay_timeout"]
